--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,8 @@
-
 <div class="row container mt-4">
-    <div class="col-3">
-        <h2>Busquedas</h2>
-        <hr>
-        <ul class="list-group">
-            <li class="list-group-item">Buscar país</li>
-            <li class="list-group-item">Por región</li>
-            <li class="list-group-item">Por capital</li>
-        </ul>
-    </div>
-    <div class="col">
-        <router-outlet></router-outlet>
-    </div>
+  <div class="col-3">
+    <app-sidebar></app-sidebar>
+  </div>
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
 </div>
