--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,15 @@
-<p>por-capital works!</p>
+<h2>Por Capital</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <app-pais-input (onEnter)="buscar( $event )" placeholder="Buscar por capital..."></app-pais-input>
+    <hr />
+    <div class="alert alert-danger" *ngIf="hayError">
+      No se encontró nada con el término <b>{{ termino }}</b>
+    </div>
+    <div *ngIf="!hayError" class="row col">
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+  </div>
+</div>
