--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,15 @@
-<p>por-pais works!</p>
+<h2>Por País</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <app-pais-input placeholder="Buscar por país..." (onEnter)="buscar( $event )" (onDebounce)="sugerencias($event)"></app-pais-input>
+    <hr />
+    <div class="alert alert-danger" *ngIf="hayError">
+      No se encontró nada con el término <b>{{ termino }}</b>
+    </div>
+    <div *ngIf="!hayError" class="row col">
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+  </div>
+</div>
